--- a/src/style/surveyImpresarial.css
+++ b/src/style/surveyImpresarial.css
@@ -1,5 +1,5 @@
 .survey {
-  margin: 30px 0 50px;
+  margin-top: 30px;
 }
 
 .survey__list {
@@ -10,8 +10,8 @@
   margin-bottom: 30px;
 }
 
-.survey__list:last-child {
-  margin-bottom: 0;
+.survey__list:last-of-type {
+  margin-bottom: 50px;
 }
 
 .survey__list--title {
@@ -25,7 +25,7 @@
 .survey__list--question {
   display: flex;
   flex-flow: column;
-  gap: 8px;
+  gap: 10px;
 }
 
 .survey__list--radios {
@@ -50,16 +50,16 @@
 
 .survey__list input[type="radio"] + .radio-label:before {
   content: "";
-  background: #f4f4f4;
+  background: #fff;
   border-radius: 100%;
-  border: 1px solid #b4b4b4;
+  border: 2px solid #b4b4b4;
   display: inline-block;
   width: 16px;
   height: 16px;
   min-width: 16px;
   position: relative;
   top: 0;
-  margin-right: 1em;
+  margin-right: 15px;
   vertical-align: top;
   cursor: pointer;
   text-align: center;
@@ -75,7 +75,7 @@
 .survey__list input[type="radio"]:checked + .radio-label:before {
   background-color: #582b6f;
   box-shadow: inset 0 0 0 3px #f4f4f4;
-  border: 1.5px solid #582b6f;
+  border: 2px solid #582b6f;
 }
 
 .survey__list input[type="radio"]:focus + .radio-label:before {
