--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,4 +1,5 @@
 @import url("./global.css");
 @import url("./home.css");
 @import url("./surveyImpresarial.css");
-@import url("./formulario.css");
+@import url("./inputs.css");
+@import url("./surveySigam.css");
