--- a/src/style/inputs.css
+++ b/src/style/inputs.css
@@ -6,7 +6,7 @@
   margin-top: 30px;
 }
 
-/* INPUTS */
+/* INPUTS  DE TEXTO */
 .input-label {
   display: flex;
   flex-flow: column;
@@ -40,9 +40,47 @@
   color: #b4b4b4;
 }
 
+.input-element__output {
+  background-color: transparent;
+  border-color: #fff;
+  color: #fff;
+}
+
+.input-element__output::placeholder {
+  color: #fff;
+}
+
 .error-message {
   font-size: 0.8rem;
   color: #ff0000;
   font-family: inherit;
   line-height: 14px;
+}
+
+/* INPUT SELECT */
+.input-label__select {
+  min-width: 350px;
+  position: relative;
+}
+
+.input-label__select select {
+  appearance: none;
+  width: 100%;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.input-label__select::after {
+  --size: 5px;
+  content: "";
+  position: absolute;
+  right: 21px;
+  pointer-events: none;
+}
+
+.input-label__select::after {
+  border-left: var(--size) solid transparent;
+  border-right: var(--size) solid transparent;
+  border-top: var(--size) solid black;
+  top: 65%;
 }
