--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,5 +1,8 @@
 @import url("./global.css");
+@import url("./header.css");
+@import url("./footer.css");
 @import url("./home.css");
 @import url("./surveyImpresarial.css");
 @import url("./inputs.css");
 @import url("./surveySigam.css");
+@import url("./iframe.css");
