--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,6 +1,6 @@
 /*  HEADER   */
 .header {
-  height: 60px;
+  height: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,8 +10,9 @@
   left: 0;
   z-index: 100;
   transition: background-color 0.1s ease;
+  padding: 10px 20px;
 }
 
 .header .logo > img {
-  width: 30vw;
+  width: 40vw;
 }
