--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,9 +1,9 @@
 .home-video {
   position: fixed;
   inset: 0;
-  width: inherit;
+  width: 100vw;
   height: 100vh;
-  object-fit: cover;
+  object-fit: fill;
   margin: auto;
   max-width: 992px;
 }
