--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,17 +1,26 @@
 /*  HEADER   */
 .header {
-  height: 60px;
+  height: auto;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  gap: 20px;
+  flex-flow: column;
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
   z-index: 100;
-  transition: background-color 0.1s ease;
+  background-color: #009499;
+  transition: box-shadow 0.5s ease;
+  padding: 10px 20px;
 }
 
 .header .logo > img {
-  width: 30vw;
+  width: 40vw;
+}
+
+.header__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
