--- a/src/style/index.css
+++ b/src/style/index.css
@@ -3,6 +3,6 @@
 @import url("./footer.css");
 @import url("./home.css");
 @import url("./surveyImpresarial.css");
-@import url("./inputs.css");
 @import url("./surveySigam.css");
+@import url("./formulario.css");
 @import url("./iframe.css");
