--- a/src/style/home.css
+++ b/src/style/home.css
@@ -3,7 +3,7 @@
   inset: 0;
   width: inherit;
   height: 100vh;
-  object-fit: cover;
+  object-fit: fill;
   margin: auto;
   max-width: 992px;
 }
