--- a/src/style/surveySigam.css
+++ b/src/style/surveySigam.css
@@ -15,10 +15,10 @@
   padding: 15px;
   border-radius: 10px;
   min-height: 120px;
-  background-color: rgba(0, 93, 96, 0.1);
+  background-color: rgba(255, 82, 0, 0.95);
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
-  color: #fff;
-  font-family: inherit;
+  color: #000;
+  font-family: "Gilroy-bold";
   letter-spacing: 1.2px;
 }
 
