--- a/src/style/global.css
+++ b/src/style/global.css
@@ -122,6 +122,13 @@ input[type="number"]::-webkit-outer-spin-button {
   line-height: 18px;
 }
 
+.botao:disabled {
+  opacity: 0.5;
+  box-shadow: none !important;
+  transform: none !important;
+  cursor: not-allowed;
+}
+
 .btnVoltar {
   width: 35px;
   height: 35px;
@@ -154,7 +161,7 @@ input[type="number"]::-webkit-outer-spin-button {
   color: #fff;
   font-size: 12px;
   font-family: "Gilroy-thin";
-  letter-spacing: 3px;
+  letter-spacing: 2px;
 }
 
 .paragraph {
