--- a/src/style/global.css
+++ b/src/style/global.css
@@ -148,6 +148,7 @@ input[type="number"]::-webkit-outer-spin-button {
   text-transform: uppercase;
   padding-bottom: 10px;
   text-align: center;
+  margin-top: 15px;
 }
 
 .subtitulo {
