--- a/src/style/surveyImpresarial.css
+++ b/src/style/surveyImpresarial.css
@@ -1,5 +1,6 @@
 .survey {
   margin-top: 30px;
+  margin: 20px;
 }
 
 .survey__list {
@@ -8,6 +9,11 @@
   gap: 10px;
   text-align: start;
   margin-bottom: 30px;
+  background-color: rgba(0, 93, 96, 0.3);
+  padding: 20px;
+  /* border: 1px solid rgba(255, 255, 255, 0.1); */
+  border-radius: 20px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
 }
 
 .survey__list:last-of-type {
@@ -20,12 +26,14 @@
   padding-bottom: 10px;
   letter-spacing: 1px;
   line-height: 20px;
+  font-family: 'Gilroy-bold';
 }
 
 .survey__list--question {
   display: flex;
   flex-flow: column;
   gap: 10px;
+  font-family: 'Gilroy-thin';
 }
 
 .survey__list--radios {
