--- a/src/style/formulario.css
+++ b/src/style/formulario.css
@@ -2,7 +2,7 @@
 .form {
   display: flex;
   flex-flow: column;
-  gap: 15px;
+  gap: 20px;
 }
 
 /* INPUTS  DE TEXTO */
@@ -28,6 +28,14 @@
   font-size: 1rem;
   color: #582b6f;
   font-weight: 400;
+}
+
+.input-element:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  border: 2px solid #b4b4b4;
+  color: #b4b4b4;
+  background-color: transparent;
 }
 
 .input-element:focus {
