--- a/src/style/global.css
+++ b/src/style/global.css
@@ -59,7 +59,7 @@ input[type="number"]::-webkit-outer-spin-button {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
+  width: 95%;
   text-align: center;
   min-height: calc(100vh - 150px);
   padding-top: 160px;
@@ -175,10 +175,12 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .textoMain {
+  padding-top: 20px;
   font-family: "Gilroy-thin";
-  font-size: 1.25rem;
+  font-size: 1.4rem;
   color: #fff;
   font-style: italic;
+  letter-spacing: 1px;
 }
 
 .teste {
@@ -228,4 +230,63 @@ input[type="number"]::-webkit-outer-spin-button {
   letter-spacing: 1px;
   line-height: 20px;
   text-align: start;
+}
+
+/*TOPICOS DA PAGINA SERVIÇOS*/
+
+.container-topicos_servicos {
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  text-align: start;
+  color: #fff;
+  width: 50%;
+  justify-content: start;
+  align-items: center;
+  margin: 30px 20px 10px;
+  border-radius: 20px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 93, 96, 0.4);
+}
+
+.element-topicos_servicos {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  color: #fff;
+}
+
+.icon-topicos_servicos {
+  height: 80px;
+  width: 80px;
+}
+
+.element-topicos_servicos > p {
+  font-family: 'Gilroy-bold';
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+/*PAGINA RH*/
+
+.element-topicos_rh {
+  display: flex;
+  flex-direction: column;
+  gap: px;
+  justify-content: start;
+  align-items: start;
+  color: #fff;
+}
+
+.icon-topicos_rh {
+  height: 40px;
+  width: 40px;
+}
+
+.element-topicos_rh > p {
+  font-family: 'Gilroy-bold';
+  font-size: 1.2rem;
+  text-align: start;
+  margin-top: 10px;
 }
