add: validação da presençado do formulário na tela

--- a/src/style/formulario.css
+++ b/src/style/formulario.css
@@ -18,6 +18,10 @@
   font-weight: 600;
 }
 
+.input-label > span {
+  padding-left: 20px;
+}
+
 .input-element {
   width: inherit;
   height: 50px;
