--- a/src/style/iframe.css
+++ b/src/style/iframe.css
@@ -24,7 +24,7 @@
   background: transparent;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  box-shadow: 0 50px 0 0 #009499;
+  box-shadow: 0 50px 0 0 #06A2B9;
   z-index: 100;
 }
 
@@ -38,7 +38,7 @@
   height: 60px;
   width: 100%;
   background: transparent;
-  background-color: #009499;
+  background-color: #06A2B9;
   z-index: 99;
 }
 
