add: calculos para exibição de dados do tributario

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,5 +4,6 @@
 @import url("./home.css");
 @import url("./surveyImpresarial.css");
 @import url("./surveySigam.css");
+@import url("./surveyTributario.css");
 @import url("./formulario.css");
 @import url("./iframe.css");
