--- a/src/style/global.css
+++ b/src/style/global.css
@@ -61,7 +61,8 @@ input[type="number"]::-webkit-outer-spin-button {
   justify-content: center;
   width: 100%;
   text-align: center;
-  min-height: calc(100vh - 150px);
+  min-height: auto;
+  /* min-height: calc(100vh - 150px); */
   padding-top: 160px;
 }
 
