--- a/src/style/global.css
+++ b/src/style/global.css
@@ -245,7 +245,8 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 20px 20px 10px;
   border-radius: 20px;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
-  background-color: rgba(0, 93, 96, 0.6);
+  background-color: transparent;
+  border: 1px solid #007175;
 }
 
 .element-topicos_servicos {
@@ -289,6 +290,7 @@ input[type="number"]::-webkit-outer-spin-button {
   font-size: 1.2rem;
   text-align: start;
   margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .container-topicos_rh {
@@ -304,4 +306,9 @@ input[type="number"]::-webkit-outer-spin-button {
   border-radius: 20px;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
   background-color: transparent;
+}
+
+#gif{
+  width: 50px;
+  height: 50px;
 }
