--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,7 +1,7 @@
 .home-video {
   position: fixed;
   inset: 0;
-  width: inherit;
+  width: 100%;
   height: 100vh;
   object-fit: fill;
   margin: auto;
