--- a/src/style/global.css
+++ b/src/style/global.css
@@ -59,7 +59,7 @@ input[type="number"]::-webkit-outer-spin-button {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  width: 95%;
+  width: 100%;
   text-align: center;
   min-height: auto;
   /* min-height: calc(100vh - 150px); */
@@ -107,7 +107,6 @@ input[type="number"]::-webkit-outer-spin-button {
   padding: 5px 30px;
   min-height: 50px;
   width: 100%;
-  max-width: 520px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -236,14 +235,23 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 /*TOPICOS DA PAGINA SERVIÇOS*/
+.container-topicos {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 20px;
+  margin: 20px 0 10px 0;
+}
 
 .container-topicos_servicos {
-  gap: 20px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   padding: 10px;
-  text-align: start;
   color: #fff;
-  width: 50%;
-  margin: 20px 20px 10px;
+  min-height: 120px;
+  width: 100%;
   border-radius: 20px;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
   background-color: rgba(0, 93, 96, 0.6);
@@ -263,7 +271,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .element-topicos_servicos > p {
-  font-family: 'Gilroy-bold';
+  font-family: "Gilroy-bold";
   font-size: 1rem;
   text-align: center;
 }
@@ -286,21 +294,28 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .element-topicos_rh > p {
-  font-family: 'Gilroy-bold';
+  font-family: "Gilroy-bold";
   font-size: 1.2rem;
   text-align: start;
   margin-top: 20px;
 }
 
-.container-topicos_rh {
+/*  CONSULTORIA RH */
+.consultoria-rh {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  margin: 20px 0 10px 0;
+}
+
+.consultoria-rh__item {
   display: flex;
   flex-direction: column;
   gap: 20px;
   padding: 20px;
   text-align: start;
   color: #fff;
-  width: 50%;
-  margin: 20px 20px 10px;
+  width: 100%;
   border: 2px solid #007175;
   border-radius: 20px;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
