--- a/src/style/global.css
+++ b/src/style/global.css
@@ -237,7 +237,7 @@ input[type="number"]::-webkit-outer-spin-button {
 /*TOPICOS DA PAGINA SERVIÇOS*/
 .container-topicos {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 20px;
   margin: 20px 0px 0px 0px;
 }
@@ -280,26 +280,12 @@ input[type="number"]::-webkit-outer-spin-button {
 
 /*PAGINA RH*/
 
-
 .icon-topicos_rh {
   height: 50px;
   width: 50px;
 }
 
-.consultoria-rh__item > p {
-  font-family: "Gilroy-bold";
-  font-size: 1.2rem;
-  text-align: start;
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-
 /*  CONSULTORIA RH */
-.consultoria-rh {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-}
-
 .consultoria-rh__item {
   display: flex;
   flex-direction: column;
@@ -313,6 +299,16 @@ input[type="number"]::-webkit-outer-spin-button {
   border-radius: 20px;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
   background-color: transparent;
+  height: 100%;
+}
+
+.consultoria-rh__item > p {
+  font-family: "Gilroy-bold";
+  font-size: 1rem;
+  text-align: start;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
 }
 
 .container-topicos_rh {
