--- a/src/style/global.css
+++ b/src/style/global.css
@@ -63,7 +63,7 @@ input[type="number"]::-webkit-outer-spin-button {
   text-align: center;
   min-height: auto;
   /* min-height: calc(100vh - 150px); */
-  padding-top: 160px;
+  padding-top: 180px;
 }
 
 .explorationContainer .exploration {
@@ -107,6 +107,7 @@ input[type="number"]::-webkit-outer-spin-button {
   padding: 5px 30px;
   min-height: 50px;
   width: 100%;
+  max-width: 720px;
   display: flex;
   justify-content: center;
   align-items: center;
