--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,7 +2,7 @@
 @import url("./header.css");
 @import url("./footer.css");
 @import url("./home.css");
-@import url("./surveyImpresarial.css");
+@import url("./surveyRadios.css");
 @import url("./surveySigam.css");
 @import url("./surveyTributario.css");
 @import url("./formulario.css");
