--- a/src/style/surveyRadios.css
+++ b/src/style/surveyRadios.css
@@ -1,5 +1,6 @@
 .survey {
   margin-top: 30px;
+  font-family: "Gilroy-bold";
 }
 
 .survey__list {
@@ -10,7 +11,6 @@
   margin-bottom: 30px;
   background-color: rgba(0, 93, 96, 0.3);
   padding: 20px;
-  /* border: 1px solid rgba(255, 255, 255, 0.1); */
   border-radius: 20px;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
 }
@@ -25,7 +25,6 @@
   padding-bottom: 10px;
   letter-spacing: 1px;
   line-height: 20px;
-  font-family: "Gilroy-bold";
 }
 
 .survey__list--question {
@@ -100,4 +99,32 @@
 
 .survey__list input[type="radio"] + .radio-label:empty:before {
   margin-right: 0;
+}
+
+/*  SURVEY DO EMPRESARIAL */
+.survey__list--empreTitle {
+  font-size: 1.5rem;
+  color: #fff;
+  letter-spacing: 1px;
+  line-height: 30px;
+}
+
+.survey__question--list {
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
+  padding-bottom: 10px;
+}
+
+.survey__question--list > h3 {
+  font-size: 1rem;
+  color: #fff;
+  letter-spacing: 1px;
+  line-height: 20px;
+}
+
+.survey__question--radios {
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
 }
