--- a/src/style/formulario.css
+++ b/src/style/formulario.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-flow: column;
   gap: 20px;
+  padding: 15px;
+
 }
 
 /* INPUTS  DE TEXTO */
@@ -25,7 +27,7 @@
 .input-element {
   width: inherit;
   height: 50px;
-  border-radius: 50px;
+  border-radius: 10px;
   border: 2px solid #b4b4b4;
   transition: all 250ms ease;
   padding: 0 20px;
