--- a/src/style/formulario.css
+++ b/src/style/formulario.css
@@ -2,7 +2,7 @@
 .form {
   display: flex;
   flex-flow: column;
-  gap: 20px;
+  gap: 10px;
   padding: 15px;
 
 }
@@ -21,18 +21,22 @@
 }
 
 .input-label > span {
-  padding-left: 20px;
+  font-size: medium;
+  font-family: 'Gilroy-thin';
+  letter-spacing: 4px;
+  padding: 10px 0;
 }
 
 .input-element {
   width: inherit;
   height: 50px;
-  border-radius: 10px;
-  border: 2px solid #b4b4b4;
+  border-radius: 5px;
+  border: 1px solid #b4b4b4;
   transition: all 250ms ease;
-  padding: 0 20px;
+  padding: 0 10px;
   font-size: 1rem;
-  color: #582b6f;
+  color: #000;
+  font-family: 'Gilroy-thin';
   font-weight: 400;
 }
 
@@ -46,11 +50,11 @@
 
 .input-element:focus {
   outline: none;
-  border: 2px solid #582b6f;
+  border: 2px solid #00ff6a;
 }
 
 .input-element::placeholder {
-  color: #b4b4b4;
+  color: #000;
 }
 
 .input-element__output {
@@ -65,7 +69,7 @@
 
 .error-message {
   font-size: 0.8rem;
-  color: #ff0000;
+  color: #fe5151;
   font-family: inherit;
   line-height: 14px;
   padding: 2px 0 0 20px;
