--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,5 +5,6 @@
 @import url("./surveyRadios.css");
 @import url("./surveySigam.css");
 @import url("./surveyTributario.css");
+@import url("./surveyHolding.css");
 @import url("./formulario.css");
 @import url("./iframe.css");
