--- a/src/style/global.css
+++ b/src/style/global.css
@@ -131,8 +131,8 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .btnVoltar {
-  width: 35px;
-  height: 35px;
+  width: auto;
+  height: auto;
   margin: 0;
   padding: 0;
   border: none;
@@ -285,7 +285,6 @@ input[type="number"]::-webkit-outer-spin-button {
   height: 50px;
   width: 50px;
 }
-
 
 /*  CONSULTORIA RH */
 .consultoria-rh {
