--- a/src/style/surveySigam.css
+++ b/src/style/surveySigam.css
@@ -11,10 +11,10 @@
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  gap: 15px;
+  gap: 0;
   padding: 15px;
   border-radius: 10px;
-  min-height: 120px;
+  min-height: 100px;
   background-color: rgba(255, 82, 0, 0.95);
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
   color: #000;
@@ -23,9 +23,26 @@
 }
 
 .roi-list__title {
-  font-size: 2rem;
+  font-size: 1.5rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: -webkit-fill-available;
 }
 
 .roi-list__value {
   font-size: 1rem;
+}
+
+.roi-list__item--custom {
+  min-height: 220px;
+  gap: 10px;
+}
+
+.roi-list__item--custom .roi-list__title {
+  font-size: 2.5rem;
+}
+
+.roi-list__item--custom .roi-list__value {
+  font-size: 1.2rem;
 }
