--- a/src/style/global.css
+++ b/src/style/global.css
@@ -119,6 +119,7 @@ input[type="number"]::-webkit-outer-spin-button {
   text-transform: uppercase;
   font-size: 0.875rem;
   line-height: 18px;
+  margin: 0 10px;
 }
 
 .botao:disabled {
