--- a/src/style/treinamentos.css
+++ b/src/style/treinamentos.css
@@ -50,4 +50,12 @@
     line-height: 20px;
     font-family: 'Gilroy-light';
   }
+
+  .page-curso_paginacao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20;
+    
+  }
   
