Criação da Página de modulos da Cigam e organização dos estilos do Accordion

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -53,6 +53,15 @@ input[type="number"]::-webkit-outer-spin-button {
   width: 100%;
 }
 
+/* CONTAINER DAS PÁGINAS */
+.container {
+  display: flex;
+  flex-flow: column;
+  gap: 20px;
+  padding: 10px;
+  height: 100vh;
+}
+
 /* MAIN */
 .hero {
   display: flex;
