--- a/src/style/surveyRadios.css
+++ b/src/style/surveyRadios.css
@@ -5,14 +5,14 @@
 
 .survey__list {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   gap: 10px;
   text-align: start;
   margin-bottom: 30px;
   background-color: rgba(0, 93, 96, 0.3);
   padding: 20px;
   border-radius: 20px;
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
 }
 
 .survey__list:last-of-type {
@@ -30,7 +30,7 @@
 
 .survey__list--question {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   gap: 5px;
   font-family: "Gilroy-thin";
   letter-spacing: 2px;
@@ -56,11 +56,12 @@
   height: inherit;
   font-family: "Gilroy-light";
   padding: 5px;
+  cursor: pointer;
 }
 
-.survey__list input[type="radio"] + .radio-label:before {
+.radio-label::before {
   content: "";
-  background: #fff;
+  background: transparent;
   border-radius: 100%;
   border: 2px solid #b4b4b4;
   display: inline-block;
@@ -71,37 +72,45 @@
   top: 0;
   margin-right: 15px;
   vertical-align: top;
-  cursor: pointer;
   text-align: center;
   transition: all 250ms ease;
 }
 
 .survey__list input[type="radio"]:checked + .radio-label {
   color: white;
-  /* font-weight: 600; */
   transition: all 200ms ease;
-  /* background-color: #582b6f; */
   border-radius: 10px;
 }
 
-.survey__list input[type="radio"]:checked + .radio-label:before {
-  background-color: #582b6f;
+.survey__list input[type="radio"]:checked + .radio-label::before {
   box-shadow: inset 0 0 0 3px #f4f4f4;
-  border: 2px solid #582b6f;
 }
 
-.survey__list input[type="radio"]:focus + .radio-label:before {
-  outline: none;
-  border-color: #582b6f;
+.survey__list input[type="radio"]:checked + .radio-label--binario {
+  background-color: blueviolet;
 }
 
-.survey__list input[type="radio"]:disabled + .radio-label:before {
+.survey__list input[type="radio"]:checked + .radio-label--binario::before {
+  background-color: blueviolet;
+  border: 2px solid blueviolet;
+}
+
+.survey__list input[type="radio"]:checked + .radio-label--multiplo {
+  background-color: #0000ff;
+}
+
+.survey__list input[type="radio"]:checked + .radio-label--multiplo::before {
+  background-color: #0000ff;
+  border: 2px solid #0000ff;
+}
+
+.survey__list input[type="radio"]:disabled + .radio-label::before {
   box-shadow: inset 0 0 0 4px #f4f4f4;
   border-color: #b4b4b4;
   background: #b4b4b4;
 }
 
-.survey__list input[type="radio"] + .radio-label:empty:before {
+.survey__list input[type="radio"] + .radio-label:empty::before {
   margin-right: 0;
 }
 
@@ -117,7 +126,7 @@
 
 .survey__question--list {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   gap: 10px;
   padding-bottom: 10px;
 }
@@ -132,7 +141,7 @@
 
 .survey__question--radios {
   display: flex;
-  flex-flow: row;
+  flex-direction: row;
   gap: 10px;
   padding-bottom: 10px;
 }
