--- a/src/style/surveyRadios.css
+++ b/src/style/surveyRadios.css
@@ -85,14 +85,14 @@
 }
 
 .survey__list input[type="radio"]:checked + .radio-label:before {
-  background-color: #582b6f;
+  background-color: #000;
   box-shadow: inset 0 0 0 3px #f4f4f4;
-  border: 2px solid #582b6f;
+  border: 2px solid #000;
 }
 
 .survey__list input[type="radio"]:focus + .radio-label:before {
   outline: none;
-  border-color: #582b6f;
+  border-color: #000;
 }
 
 .survey__list input[type="radio"]:disabled + .radio-label:before {
