--- a/src/style/surveyTributario.css
+++ b/src/style/surveyTributario.css
@@ -9,27 +9,35 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: start;
-  gap: 15px;
-  padding: 15px;
+  gap: 10px;
+  padding: 15px 30px;
   border-radius: 10px;
+  border-bottom: #fff 1px solid;
   min-height: 120px;
   background-color: rgba(0, 93, 96, 0.1);
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
   color: #fff;
   font-family: inherit;
   letter-spacing: 1.5px;
+  height: 150px;
+  
 }
 
 .tributario-list__title {
-  font-size: 1.8rem;
+  font-size: 2.7rem;
   text-align: start;
   line-height: 24px;
+  font-family: 'Gilroy-bold';
+  letter-spacing: 4px;
 }
 
-.tributario-list__title span {
-  font-size: 1.5rem;
+.tributario-list__item > span {
+  font-size: 1rem;
+  font-family: 'Gilroy-light';
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
 
 .page-tributario_paginacao {
