--- a/src/style/index.css
+++ b/src/style/index.css
@@ -8,3 +8,7 @@
 @import url("./surveyHolding.css");
 @import url("./formulario.css");
 @import url("./iframe.css");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
