--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -16,7 +16,7 @@
   flex-direction: column;
   width: 100%;
   display: flex;
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
 }
 
 .copyright {
