--- a/src/style/global.css
+++ b/src/style/global.css
@@ -110,7 +110,7 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 20px 0;
 }
 
-.botao {
+/* .botao {
   padding: 5px 30px;
   min-height: 50px;
   width: 100%;
@@ -129,14 +129,14 @@ input[type="number"]::-webkit-outer-spin-button {
   font-size: 0.875rem;
   line-height: 18px;
   margin: 0 10px;
-}
+} */
 
-.botao:disabled {
+/* .botao:disabled {
   opacity: 0.5;
   box-shadow: none !important;
   transform: none !important;
   cursor: not-allowed;
-}
+} */
 
 .btnVoltar {
   width: auto;
@@ -164,7 +164,7 @@ input[type="number"]::-webkit-outer-spin-button {
   text-transform: uppercase;
   padding-bottom: 10px;
   text-align: center;
-  margin-top: 15px;
+  /* margin-top: 15px; */
 }
 
 .subtitulo {
