--- a/src/style/global.css
+++ b/src/style/global.css
@@ -329,4 +329,42 @@ input[type="number"]::-webkit-outer-spin-button {
   align-items: center;
 }
 
+/* ========================================== */
+.overlay {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.22);
+  backdrop-filter: blur(4px);
+  animation: fadein 0.5s;
+  z-index: 60000;
+}
 
+/* Add Animation */
+@keyframes animatetop {
+  from {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.modal {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  height: 50%;
+  background: white;
+  border-radius: 0.75rem;
+  box-shadow: 0 20px 24px -4px rgba(16, 24, 40, 0.1),
+    0 8px 8px -4px rgba(16, 24, 40, 0.04);
+  z-index: 10;
+  animation: animatetop 0.6s;
+}
