--- a/src/style/global.css
+++ b/src/style/global.css
@@ -128,7 +128,6 @@ input[type="number"]::-webkit-outer-spin-button {
   text-transform: uppercase;
   font-size: 0.875rem;
   line-height: 18px;
-  margin: 0 10px;
 }
 
 .botao:disabled {
@@ -359,12 +358,20 @@ input[type="number"]::-webkit-outer-spin-button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  max-width: 540px;
+  height: auto;
   background: white;
   border-radius: 0.75rem;
   box-shadow: 0 20px 24px -4px rgba(16, 24, 40, 0.1),
     0 8px 8px -4px rgba(16, 24, 40, 0.04);
   z-index: 10;
   animation: animatetop 0.6s;
+  padding: 20px;
+}
+
+@media (max-width: 768px) {
+  .modal {
+    width: calc(100% - 30px);
+  }
 }
