--- a/src/style/formulario.css
+++ b/src/style/formulario.css
@@ -3,8 +3,22 @@
   display: flex;
   flex-flow: column;
   gap: 10px;
-  padding: 30px 0;
+  padding: 10px 0 30px;
   width: 100%;
+}
+
+.form__title {
+  font-family: inherit;
+  font-size: 1.5rem;
+  color: #000;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+@media (max-width: 768px) {
+  .form__title {
+    font-size: 1.3rem;
+  }
 }
 
 /* INPUTS  DE TEXTO */
@@ -12,7 +26,7 @@
   display: flex;
   align-items: center;
   background-color: #4b5052;
-  gap: 10px;
+  gap: 5px;
   border-radius: 10px;
   padding: 0 10px;
 }
@@ -28,14 +42,27 @@
   line-height: 20px;
   font-weight: 600;
   padding: 3px 0;
+  position: relative;
 }
 
-/* .input-label > span {
-  font-size: medium;
-  font-family: "Gilroy-thin";
-  letter-spacing: 4px;
-  padding: 10px 0;
-} */
+.input-label--custom select {
+  appearance: none;
+}
+
+.input-label--custom::after {
+  --size: 5px;
+  content: "";
+  position: absolute;
+  right: 13px;
+  pointer-events: none;
+}
+
+.input-label--custom::after {
+  border-left: var(--size) solid transparent;
+  border-right: var(--size) solid transparent;
+  border-top: var(--size) solid black;
+  top: 50%;
+}
 
 .input-element {
   width: inherit;
