--- a/src/style/global.css
+++ b/src/style/global.css
@@ -323,6 +323,15 @@ input[type="number"]::-webkit-outer-spin-button {
   padding: 5px 0;
 }
 
+.consultoria-rh__item > ul {
+  padding-left: 30px;
+}
+
+.consultoria-rh__item > ul > li {
+  padding-bottom: 5px;
+  list-style-type: circle;
+}
+
 .container-topicos_rh {
   display: flex;
   justify-content: center;
