--- a/src/style/global.css
+++ b/src/style/global.css
@@ -417,7 +417,7 @@ input[type="number"]::-webkit-outer-spin-button {
   transition: transform 0.3s ease-in-out;
 }
 
-h1 {
+/* h1 {
   margin: 0;
   position: relative;
   top: 50%;
@@ -426,7 +426,7 @@ h1 {
   transform: translateY(-50%);
   text-align: center;
   font-size: 40px;
-}
+} */
 
 .menu-aside__list {
   list-style: none;
