--- a/src/style/formulario.css
+++ b/src/style/formulario.css
@@ -4,7 +4,6 @@
   flex-flow: column;
   gap: 10px;
   padding: 15px;
-
 }
 
 /* INPUTS  DE TEXTO */
@@ -22,7 +21,7 @@
 
 .input-label > span {
   font-size: medium;
-  font-family: 'Gilroy-thin';
+  font-family: "Gilroy-thin";
   letter-spacing: 4px;
   padding: 10px 0;
 }
@@ -36,7 +35,7 @@
   padding: 0 10px;
   font-size: 1rem;
   color: #000;
-  font-family: 'Gilroy-thin';
+  font-family: "Gilroy-thin";
   font-weight: 400;
 }
 
@@ -101,4 +100,8 @@
   border-right: var(--size) solid transparent;
   border-top: var(--size) solid black;
   top: 65%;
+}
+
+.input-label__select--cigam::after {
+  top: 48%;
 }
