--- a/src/style/formulario.css
+++ b/src/style/formulario.css
@@ -1,4 +1,3 @@
-/* FORMULÁRO */
 .form {
   display: flex;
   flex-flow: column;
@@ -13,7 +12,6 @@
   color: #000;
   text-align: center;
   margin-bottom: 5px;
-  font-family: "Gilroy-thin";
 }
 
 @media (max-width: 768px) {
@@ -22,7 +20,6 @@
   }
 }
 
-/* INPUTS  DE TEXTO */
 .input-wrapper {
   display: flex;
   align-items: center;
@@ -90,11 +87,6 @@
   background-color: transparent;
 }
 
-.input-element:focus {
-  outline: none;
-  border: 2px solid #00ff6a;
-}
-
 .input-element::placeholder {
   color: #000;
 }
@@ -109,15 +101,6 @@
   color: #fff;
 }
 
-.error-message {
-  font-size: 0.8rem;
-  color: #fe5151;
-  font-family: inherit;
-  line-height: 14px;
-  padding-top: 2px;
-}
-
-/* INPUT SELECT */
 .input-label__select {
   min-width: 250px;
   position: relative;
@@ -131,16 +114,13 @@
 }
 
 .input-label__select::after {
-  --size: 5px;
+  width: 5px;
   content: "";
   position: absolute;
   right: 21px;
   pointer-events: none;
-}
-
-.input-label__select::after {
-  border-left: var(--size) solid transparent;
-  border-right: var(--size) solid transparent;
-  border-top: var(--size) solid black;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid black;
   top: 65%;
 }
