--- a/src/style/surveyRadios.css
+++ b/src/style/surveyRadios.css
@@ -1,42 +1,42 @@
 /* BOTÃO RADIO */
-.survey__list input[type="radio"] {
+input[type="radio"] {
   position: absolute;
   opacity: 0;
 }
-.survey__list input[type="radio"]:checked + .radio-label {
+input[type="radio"]:checked + .radio-label {
   color: white;
   transition: all 200ms ease;
   border-radius: 10px;
 }
 
-.survey__list input[type="radio"]:checked + .radio-label::before {
-  box-shadow: inset 0 0 0 3px #f4f4f4;
+input[type="radio"]:checked + .radio-label::before {
+  box-shadow: inset 0 0 0 2.5px #f4f4f4;
 }
 
-.survey__list input[type="radio"]:checked + .radio-label--binario {
+input[type="radio"]:checked + .radio-label--binario {
   background-color: rgb(9, 0, 129);
 }
 
-.survey__list input[type="radio"]:checked + .radio-label--binario::before {
+input[type="radio"]:checked + .radio-label--binario::before {
   background-color: #000;
   border: 2px solid #000;
 }
 
-.survey__list input[type="radio"]:checked + .radio-label--multiplo {
+input[type="radio"]:checked + .radio-label--multiplo {
   background-color: #582b6f;
 }
 
-.survey__list input[type="radio"]:checked + .radio-label--multiplo::before {
+input[type="radio"]:checked + .radio-label--multiplo::before {
   background-color: #000;
   border: 2px solid #000;
 }
 
-.survey__list input[type="radio"]:disabled + .radio-label::before {
+input[type="radio"]:disabled + .radio-label::before {
   box-shadow: inset 0 0 0 4px #f4f4f4;
   border-color: #b4b4b4;
   background: #b4b4b4;
 }
 
-.survey__list input[type="radio"] + .radio-label:empty::before {
+input[type="radio"] + .radio-label:empty::before {
   margin-right: 0;
 }
