--- a/src/style/global.css
+++ b/src/style/global.css
@@ -240,140 +240,110 @@ input[type="number"]::-webkit-outer-spin-button {
   }
 }
 
-/* ========================== */
-.menu-aside {
-  background-color: #0799d3;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 250px;
-  z-index: 1;
-}
-
-.menu-section {
-  position: relative;
+/* SEÇÃO DO IFRAME */
+.iframeDash {
   width: 100%;
-  height: 100%;
-  background-color: #fff;
-  overflow: hidden;
-}
-
-.menu-label {
-  display: inline-block;
-  padding: 7px 10px;
-  background-color: transparent;
-  cursor: pointer;
-  z-index: 3000;
-  position: fixed;
-  right: 0;
-}
-
-.bar {
-  display: block;
-  background-color: #fff;
-  width: 30px;
-  height: 3px;
-  border-radius: 5px;
-  margin: 5px auto;
-  transition: background-color 0.3s ease-in, transform 0.3s ease-in,
-    width 0.3s ease-in;
-}
-
-.content {
-  top: 0;
-  bottom: 0;
-  position: absolute;
-  right: 0;
-  left: 0;
-  background-color: #fff;
-  z-index: 2;
-  transition: transform 0.3s ease-in-out;
-}
-
-.menu-aside__list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  margin-top: 100px;
-  text-align: center;
-  border-top: 2px solid rgba(255, 255, 255, 0.7);
-}
-
-.menu-aside__anchor {
-  border-bottom: 2px solid rgba(255, 255, 255, 0.7);
-  padding: 20px 0;
-  display: block;
-  color: #fff;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: 500;
+  min-height: 80vh;
   position: relative;
-  transition: color 0.3s 0.15s ease-in;
 }
 
-.menu-aside__anchor::after {
+.iframe-content {
+  min-height: inherit;
+  width: inherit;
+  position: relative;
+  border-radius: 20px 20px 0px 0px;
+}
+
+.iframeDash::before {
   content: "";
   position: absolute;
+  bottom: 65px;
+  margin: auto;
   left: 0;
-  bottom: 0;
-  height: 100%;
-  background-color: #fff;
-  width: 0;
-  transition: width 0.3s ease-in;
-  z-index: -1;
-}
-
-.menu-aside__anchor:hover {
-  color: #0799d3;
-}
-
-.menu-aside__anchor:hover::after {
+  right: 0;
+  height: 100px;
   width: 100%;
+  background: transparent;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  box-shadow: 0 50px 0 0 #028ea3;
+  z-index: 100;
 }
 
-.menu-section input[type="checkbox"] {
-  display: none;
-}
-
-.menu-section input[type="checkbox"]:checked ~ .content {
-  transform: translateX(-250px);
-}
-
-.menu-section input[type="checkbox"]:checked ~ .menu-label .bar {
-  background-color: #fff;
-}
-
-.menu-section input[type="checkbox"]:checked ~ .menu-label .top {
-  -webkit-transform: translateY(0px) rotateZ(45deg);
-  -moz-transform: translateY(0px) rotateZ(45deg);
-  -ms-transform: translateY(0px) rotateZ(45deg);
-  -o-transform: translateY(0px) rotateZ(45deg);
-  transform: translateY(0px) rotateZ(45deg);
-}
-
-.menu-section input[type="checkbox"]:checked ~ .menu-label .bottom {
-  -webkit-transform: translateY(-15px) rotateZ(-45deg);
-  -moz-transform: translateY(-15px) rotateZ(-45deg);
-  -ms-transform: translateY(-15px) rotateZ(-45deg);
-  -o-transform: translateY(-15px) rotateZ(-45deg);
-  transform: translateY(-15px) rotateZ(-45deg);
-}
-
-.menu-section input[type="checkbox"]:checked ~ .menu-label .middle {
-  width: 0;
-}
-
-.middle {
-  margin: 0 auto;
-}
-
-.ua {
+.iframeDash::after {
+  content: "";
   position: absolute;
-  right: 20px;
-  bottom: 20px;
-  color: #0799d3;
-  font-size: 2em;
-  z-index: 2;
+  bottom: 0;
+  margin: auto;
+  left: 0;
+  right: 0;
+  height: 60px;
+  width: 100%;
+  background: transparent;
+  background-color: #008ea4fc;
+  z-index: 99;
+}
+
+.iframe-border {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  margin: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: calc(100% - 65px);
+  width: 100%;
+  border: 3px solid rgb(255, 255, 255);
+  border-radius: 20px;
+  z-index: 98;
+  pointer-events: none;
+}
+
+iframe {
+  width: 94%;
+  height: 100%;
+}
+
+/* BOTÃO RADIO */
+input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+}
+input[type="radio"]:checked + .radio-label {
+  color: white;
+  transition: all 200ms ease;
+  border-radius: 10px;
+}
+
+input[type="radio"]:checked + .radio-label::before {
+  box-shadow: inset 0 0 0 2.5px #f4f4f4;
+}
+
+input[type="radio"]:checked + .radio-label--binario {
+  background-color: rgb(9, 0, 129);
+}
+
+input[type="radio"]:checked + .radio-label--binario::before {
+  background-color: #000;
+  border: 2px solid #000;
+}
+
+input[type="radio"]:checked + .radio-label--multiplo {
+  background-color: #582b6f;
+}
+
+input[type="radio"]:checked + .radio-label--multiplo::before {
+  background-color: #000;
+  border: 2px solid #000;
+}
+
+input[type="radio"]:disabled + .radio-label::before {
+  box-shadow: inset 0 0 0 4px #f4f4f4;
+  border-color: #b4b4b4;
+  background: #b4b4b4;
+}
+
+input[type="radio"] + .radio-label:empty::before {
+  margin-right: 0;
 }
